--- a/APIsLayer/appsettings.json
+++ b/APIsLayer/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Server=DESKTOP-BE6MD1V;Database=DefaultApp;Integrated Security=True;TrustServerCertificate=True;" }
+  "ConnectionStrings": { "DefaultConnection": "Server=DESKTOP-BE6MD1V;Database=DefaultApp;Integrated Security=True;TrustServerCertificate=True;" },
+  "BaseURL": "https://localhost:7276"
 }
