--- a/APIsLayer/appsettings.json
+++ b/APIsLayer/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Server=DESKTOP-BE6MD1V;Database=DefaultApp;Integrated Security=True;TrustServerCertificate=True;" },
-  "BaseURL": "https://localhost:7276"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-BE6MD1V;Database=DefaultApp;Integrated Security=True;TrustServerCertificate=True;",
+    "RedisConnection": "localhost"
+  },
+  "BaseURL": "https://localhost:7276",
+ 
 }
