--- a/CoreLayer/CoreLayer.csproj
+++ b/CoreLayer/CoreLayer.csproj
@@ -10,4 +10,8 @@
     <Folder Include="ServiceContract\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
+  </ItemGroup>
+
 </Project>
