--- a/APIsLayer/appsettings.json
+++ b/APIsLayer/appsettings.json
@@ -8,8 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-BE6MD1V;Database=DefaultApp;Integrated Security=True;TrustServerCertificate=True;",
+    "identityConnection": "Server=DESKTOP-BE6MD1V;Database=IdentityDb;Integrated Security=True;TrustServerCertificate=True;",
     "RedisConnection": "localhost"
   },
   "BaseURL": "https://localhost:7276",
+  "JWT": {
+    "Key": "StrongAuthenticationByBelal12345",
+    "Issuer": "https://localhost:7276",
+    "Audience": "MySecureKeyBilal",
+    "ExpireTimeByDays": "2"
+
+  }
  
 }
